--- a/ini/mail2mqtt.ini
+++ b/ini/mail2mqtt.ini
@@ -27,4 +27,5 @@ todo_delete: False
 [INFO_Paypal]
 filter_postbox: Postbox_B
 filter_from: service@paypal.de|paypal@mail.paypal.de
-todo_delete: False
+todo_move: INBOX.Archives
+
