--- a/ini/mail2mqtt.ini
+++ b/ini/mail2mqtt.ini
@@ -1,6 +1,6 @@
 [General]
 interval: 5
-todo_seen: True
+do_seen: True
 
 [POSTBOX]
 1: Postbox_A
@@ -9,23 +9,34 @@ todo_seen: True
 [Postbox_A]
 username: 
 password: 
-server: 
+imapserver: 
 
 [Postbox_B]
 username: 
 password: 
-server: 
+imapserver: 
+smtpserver:
+smtpport: 
 
 [FILTER]
 1: MissedCall
 2: INFO_Paypal
+3: SENDTO
 
 [MissedCall]
+filter_postbox: Postbox_A
 filter_subject: Ein verpasster Anruf liegt vor
-todo_delete: False
+do_delete: True
 
 [INFO_Paypal]
 filter_postbox: Postbox_B
 filter_from: service@paypal.de|paypal@mail.paypal.de
-todo_move: INBOX.Archives
+do_moveTo: INBOX.Archives
+
+[SENDTO]
+filter_postbox: Postbox_B
+filter_subject: Terminvorschlag
+do_sendTo: abc@def.com
+do_forward: True
+do_moveTo: INBOX.Archives
 
