--- a/ini/mail2mqtt.ini
+++ b/ini/mail2mqtt.ini
@@ -20,7 +20,7 @@ smtpport:
 
 [FILTER]
 1: MissedCall
-2: INFO_Paypal
+2: Paypal_Move
 3: SENDTO
 
 [MissedCall]
@@ -28,14 +28,17 @@ filter_postbox: Postbox_A
 filter_subject: Ein verpasster Anruf liegt vor
 do_delete: True
 
-[INFO_Paypal]
-filter_postbox: Postbox_B
-filter_from: service@paypal.de|paypal@mail.paypal.de
+[Paypal_Move]
+filter_postbox: TOI_UK
+filter_subject: Beleg*für Ihren Einkauf*|Beleg*Zahlung*
+filter_from: *@paypal.de*
 do_moveTo: INBOX.Archives
+do_seen: False
+do_mqtt: False
 
 [SENDTO]
 filter_postbox: Postbox_B
-filter_subject: Terminvorschlag
+filter_subject: Terminvorschlag*
 do_sendTo: abc@def.com
 do_forward: True
 do_moveTo: INBOX.Archives
